--- a/css/styles.css
+++ b/css/styles.css
@@ -70,5 +70,6 @@ h1{
     letter-spacing: .25em;
 }
 
-.grow { transition: all .2s ease-in-out; }
-.grow:hover { transform: scale(1.1); }
+.grow { 
+    -webkit-transition: all .2s ease-in-out; 
+}
