--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,8 @@ body{
     display: block; 
     margin-left: auto; 
     margin-right: auto; 
+    z-index: 0; 
+    position:relative;
 }
 
 nav{
@@ -130,7 +132,7 @@ h1 a {
     margin-left: auto; 
     margin-right: auto; 
     margin-top: 5em; 
-    margin-bottom: -8em; 
+    margin-bottom: -8em;  
     
 /* offset-x | offset-y | blur-radius | spread-radius | color */
     box-shadow: .3em .3em .8em rgba(151,151,151,.5)
@@ -146,6 +148,14 @@ h1 a {
     border-left-color: rgb(204,51,51);
     border-width: 2em; 
     border-style: solid; 
+}
+
+/*ANIMATIONS*/
+
+.bounceIn {
+    animation-delay: 1s; 
+    animation-timing-function:cubic-bezier(.17,.67,.73,.2);
+    animation-iteration-count: infinite; 
 }
 
 
