iPad media queries

--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,73 @@ div.custom {
 }
 
 
+/*MEDIA QUERIES*/
+
+/*IPAD*/
+@media only screen 
+  and (min-device-width: 768px) {
+      
+        .uhnce { 
+            margin-top: -18.5em;
+        }
+      .heart {
+          margin-top: 7em; 
+      }
+      nav {
+          margin-top: -7em; 
+          z-index: 3; 
+      }
+      
+      .about {
+            margin-top: -2.25em;
+            line-height: 1em;
+            letter-spacing: .1em;
+            z-index: 1;
+            position: relative;
+            font-size: 7em; 
+      }
+      
+      .large-heart {
+            width: 35%; 
+            height: 35%; 
+            display: block; 
+            margin-left: auto; 
+            margin-right: auto; 
+            margin-top: 9em;
+}
+      #about-nav {
+            margin-top: -9em; 
+}
+      
+        div.social {
+            width: 15%;
+            height: 15%;
+        }
+
+/*IPHONE 4, 4S*/
+@media only screen 
+  and (min-device-width: 320px) {
+
+}
+
+
+/*IPHONE 5, 5S*/
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+}
+
+
+/* IPHONE 6*/
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+
+}
+
 
 
 
