--- a/css/styles.css
+++ b/css/styles.css
@@ -282,44 +282,76 @@ div.custom {
 
 /*MEDIA QUERIES*/
 
-/*IPAD*/
-@media screen and (max-width: 768px) {
-    .uhnce {
-        margin-top: -16.5em; 
+@media screen and (min-width: 320px) and (max-width: 480px){
+    .heart {
+        width:81%;
+        padding-top:0em;
+    
     }
-      
-      .heart {
-          margin-top: 7em; 
-      }
-      
-      nav {
-          margin-top: -7em; 
-          z-index: 3; 
-      }
-      
-      .about {
-            margin-top: -2.25em;
-            z-index: 1;
-            font-size: 7em; 
-      }
-      
-      .large-heart {
-            width: 35%; 
-            height: 35%; 
-            margin-top: 9em;
-}
-      #about-nav {
-            margin-top: -9em; 
-}
-      
-        div.social {
-            width: 15%;
-            height: 15%;
-        }
+    .uhnce {
+            margin-top: -22.5em;
+            width: 77%;
+        
+    }
+    
+    nav{
+        font-size: 1em;
+        line-height: 2em;
+    }
+    
+    h1{
+            line-height: 1.5em;
+    }
+    
+    .large-heart {
+            width: 92%;
+    }
+    
+    h4{
+            font-size: 5em;
+        padding-bottom:1em;
+    }
+    
+    .big {
+            font-size: 3em;
+    }
+    
+    .red{
+        margin-bottom: 2em;
+    
+    }
+    
+    .copy {
+        width: 80%;
+    text-align: left;
+    }
+    
+    p{
+        font-size: 1em;
+    }
+    
+    h2 {
+            margin-top: 2em;
+    font-size: 6em;
+    }
+    
+    #tickets-nav {
+            margin-top: -12em;
+    }
+    
+    h3 a {
+            margin-top: 0.5em;
+    }
+    
+    .ticket img {
+            width: 84%;
+    }
+    
 }
 
-/* IPHONE 6*/
-@media screen and (max-width: 320px)  { 
+/* IPHONE 6**********************************************************NOT WORKING*/
+/*
+@media screen and (max-width: 400px)  { 
     
     .heart {
             width: 81%;
@@ -384,14 +416,41 @@ div.custom {
             width: 84%;
     }
 }
+*/
 
-
-
-
-
-
-
-
-
-
+/*IPAD*/
+@media screen and (max-width: 768px) {
+    .uhnce {
+        margin-top: -16.5em; 
+    }
+      
+      .heart {
+          margin-top: 7em; 
+      }
+      
+      nav {
+          margin-top: -7em; 
+          z-index: 3; 
+      }
+      
+      .about {
+            margin-top: -2.25em;
+            z-index: 1;
+            font-size: 7em; 
+      }
+      
+      .large-heart {
+            width: 35%; 
+            height: 35%; 
+            margin-top: 9em;
+}
+      #about-nav {
+            margin-top: -9em; 
+}
+      
+        div.social {
+            width: 15%;
+            height: 15%;
+        }
+}
 
