--- a/css/styles.css
+++ b/css/styles.css
@@ -282,7 +282,10 @@ div.custom {
 
 /*MEDIA QUERIES*/
 
-@media screen and (min-width: 320px) and (max-width: 480px){
+@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 667px) 
+and (orientation : landscape) {
     .heart {
         width:81%;
         padding-top:0em;
