--- a/css/styles.css
+++ b/css/styles.css
@@ -354,10 +354,7 @@ div.custom {
 */
 
 /*IPAD*/
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : portrait) {
+@media screen and (max-width: 768px) {
     .uhnce {
         margin-top: -16.5em; 
     }
@@ -392,77 +389,8 @@ and (orientation : portrait) {
         }
 }
 
-/*IPHONE*/
-@media only screen 
-and (min-device-width : 375px) 
-and (max-device-width : 667px) 
-and (orientation : landscape) {
-    .heart {
-        width:81%;
-        padding-top:0em;
-    
-    }
+@media screen and (max-width: 640px) {
     .uhnce {
-            margin-top: -22.5em;
-            width: 77%;
-        
+        margin-top: -12em;
     }
-    
-    nav{
-        font-size: 1em;
-        line-height: 2em;
-    }
-    
-    h1{
-            line-height: 1.5em;
-    }
-    
-    .large-heart {
-            width: 92%;
-    }
-    
-    h4{
-            font-size: 5em;
-        padding-bottom:1em;
-    }
-    
-    .big {
-            font-size: 3em;
-    }
-    
-    .red{
-        margin-bottom: 2em;
-    
-    }
-    
-    .copy {
-        width: 80%;
-    text-align: left;
-    }
-    
-    p{
-        font-size: 1em;
-    }
-    
-    h2 {
-            margin-top: 2em;
-            font-size: 14em;
-    }
-    
-    #tickets-nav {
-            margin-top: -12em;
-    }
-    
-    h3 a {
-            margin-top: 0.5em;
-    }
-    
-    .ticket img {
-            width: 84%;
-    }
-    
-    .about {
-        margin-top: 0.75em;
-        }
 }
-
