--- a/css/styles.css
+++ b/css/styles.css
@@ -355,8 +355,12 @@ div.custom {
 }
 */
 
-/********************************************IPAD*/
-@media screen and (min-width: 1660px) {
+/********************************************LARGE MONITOR*/
+@media screen and (min-width: 1600px) {
+    
+    html {
+        background: blue; 
+    }
     .heart {
         padding-top: 8em;
     }
@@ -384,7 +388,12 @@ div.custom {
             margin-top: 48em;
     }
 }
-@media screen and (max-width: 768px) {
+
+/********************************************IPAD*/
+@media screen and (min-width: 768px) {
+    html {
+        background: red; 
+    }
     .uhnce {
         margin-top: -16.5em; 
     }
@@ -420,6 +429,10 @@ div.custom {
 }
 
 @media screen and (max-width: 640px) {
+    html {
+        background: green;
+    }
+    
     .uhnce {
         margin-top: -12em;
     }
