--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,13 @@ body{
 }
 
 /********************************************************************IMAGES*/
+
+img {
+   width: 100%; 
+    height: 100%; 
+    min-width: 100px;
+}
+
 .heart {
     width: 35%; 
     height: 35%; 
@@ -286,151 +293,53 @@ div.custom {
 
 
 /********************************************************************MEDIA QUERIES*/
-/* IPHONE 6*******************************************NOT WORKING*/
-/*
-@media screen and (max-width: 400px)  { 
-    
-    .heart {
-            width: 81%;
-            padding-top: 0em;
+@media screen and (min-width: 1000px) {
+    nav {
+        background-color: red; 
     }
-    .uhnce {
-            margin-top: -22.5em;
-            width: 77%;
-        
-    }
-    
-    nav{
-        font-size: 1em;
-        line-height: 2em;
-    }
-    
-    h1{
-            line-height: 1.5em;
-    }
-    
-    .large-heart {
-            width: 92%;
-    }
-    
-    h4{
-            font-size: 5em;
-        padding-bottom:1em;
-    }
-    
-    .big {
-            font-size: 3em;
-    }
-    
-    .red{
-        margin-bottom: 2em;
-    
-    }
-    
-    .copy {
-        width: 80%;
-    text-align: left;
-    }
-    
-    p{
-        font-size: 1em;
-    }
-    
-    h2 {
-            margin-top: 2em;
-    font-size: 6em;
-    }
-    
-    #tickets-nav {
-            margin-top: -12em;
-    }
-    
-    h3 a {
-            margin-top: 0.5em;
-    }
-    
-    .ticket img {
-            width: 84%;
-    }
-}
-*/
 
-/********************************************LARGE MONITOR*/
-@media screen and (min-width: 1600px) {
     
-    html { 
-    }
-    .heart {
-        padding-top: 8em;
-    }
-    .uhnce {
-            margin-top: -61.5em;
-    }
-    
-    h1 {
-        margin-top: 24em;
-    }
-    
-    footer {
-            padding-top: 4em;
-    }
-    
-    .about {
-            margin-top: -4.25em;
-    }
-    
-    .medium {
-            margin-top: 14.5em;
-    }
-    
-    #tickets-footer {
-            margin-top: 48em;
-    }
+/****************************END OF QUERY*/
 }
 
-/********************************************IPAD*/
-@media screen and (min-width: 768px) {
-    html { 
+@media screen and (min-width: 2200px) {
+    nav {
+        background-color: green; 
     }
     .uhnce {
-        margin-top: -16.5em; 
-    }
-      
-      .heart {
-          margin-top: 7em; 
-      }
-      
-      nav {
-          margin-top: -7em; 
-          z-index: 3; 
-      }
-      
-      .about {
-            margin-top: -2.25em;
-            z-index: 1;
-            font-size: 7em; 
-      }
-      
-      .large-heart {
-            width: 35%; 
-            height: 35%; 
-            margin-top: 9em;
-}
-      #about-nav {
-            margin-top: -9em; 
-}
-      
-        div.social {
-            width: 15%;
-            height: 15%;
-        }
-}
-
-@media screen and (max-width: 640px) {
-    html {
+        margin-top: -58.5em;
     }
     
-    .uhnce {
-        margin-top: -12em;
+    h2.about {
+        margin-top: -4.25em;
     }
+    
+    section#photo.grid-container {
+        margin-top: 20em;
+    }
+    
+    h2#tickets {
+        margin-top: 3em; 
+    }
+    
+    nav#tickets-nav {
+        margin-top: -30em;
+    }
+    
+/******************************END OF QUERY*/
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
